# Django

./: .env.sample  .gitignore  README.md  blogs_fixture.json  category_fixture.json  group_fixture.json  product_fixture.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/: base.html  menu.html
blogs/templates/blog/: blog_confirm_delete.html  blog_create.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_rename_catagory_product_category.py  0003_contact.py  0004_alter_product_category_alter_product_created_at_and_more.py  0005_product_is_published.py  0006_alter_product_options.py  0007_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  menu.html  product.html
catalog/templates/catalog/: add_product.html  home.html  menu.html  product.html  product_by_category.html  product_confirm_delete.html  success.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
users/templates/users/: edit_user.html  login.html  registration.html
