[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "ipython (>=9.4.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.linter.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"
isort = "^6.0.1"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tools.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


